--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+
+        <img id="logo" src="img/logo.svg" alt="logo Booleaner">
+
+    </header>
+
     
 </body>
 </html>
