inserimento titolo e sottotitolo

--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
 </head>
 <body>
 
+    <!-- Inizio dell'header -->
     <header>
 
         <img id="logo" src="img/logo.svg" alt="logo Booleaner">
 
     </header>
+    <!-- Fine dell'header -->
+
+    <!-- Apertura del tag main -->
+    <main>
+
+        <!-- Inserimento titolo e sottotitolo-->
+        <section>
+            <h1 id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+            <h2 id="sottotitolo">Scritto da <span id="booleaner">The Booleaner</span></h2>
+            <span id="data">il 10/10/2020</span>
+        </section>
+        <!-- Fine sezione titolo e sottotitolo -->
+
+
+    </main>
 
     
 </body>
