inserimento immagini di tim e descrizione delle foto

--- a/index.html
+++ b/index.html
@@ -21,11 +21,26 @@
 
         <!-- Inserimento titolo e sottotitolo-->
         <section>
+
             <h1 id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
             <h2 id="sottotitolo">Scritto da <span id="booleaner">The Booleaner</span></h2>
             <span id="data">il 10/10/2020</span>
+
         </section>
         <!-- Fine sezione titolo e sottotitolo -->
+
+        <!-- Inserimento immagini di Tim e descrizione foto -->
+        <section id="tim">
+
+            <div>
+                <img class="foto-tim" src="img/tim-1.jpg" alt="Tim Berners-Lee">
+                <img class="foto-tim" src="img/tim-2.jpg" alt="Tim Berners-Lee">
+            </div>
+            <span>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span><br>
+            <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+
+        </section>
+        <!-- Fine inserimento immagini di Tim -->
 
 
     </main>
