correzione grandezza del font della descrizione delle foto

--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
                 <img class="foto-tim" src="img/tim-1.jpg" alt="Tim Berners-Lee">
                 <img class="foto-tim" src="img/tim-2.jpg" alt="Tim Berners-Lee">
             </div>
-            <span>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span><br>
-            <span>2nd Photo: Wikimedia, by Paul Clarke</span>
+            <span class="descrizione">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span><br>
+            <span class="descrizione">2nd Photo: Wikimedia, by Paul Clarke</span>
 
         </section>
         <!-- Fine inserimento immagini di Tim -->
+
+        <!-- Inizio paragrafo e li non ordinata -->
+        <section>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugiat, harum soluta officiis ipsam quam excepturi dolorum, <span class="evidenziato"> sunt quidem ex, impedit expedita.</span> Ullam nihil debitis sit ipsam quis accusantium? </p>
+        </section>
+        
+
+
 
 
     </main>
