inserimento paragrafo e lista non ordinata

--- a/index.html
+++ b/index.html
@@ -44,8 +44,23 @@
 
         <!-- Inizio paragrafo e li non ordinata -->
         <section>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugiat, harum soluta officiis ipsam quam excepturi dolorum, <span class="evidenziato"> sunt quidem ex, impedit expedita.</span> Ullam nihil debitis sit ipsam quis accusantium? </p>
+
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias fugiat, harum soluta officiis ipsam quam excepturi dolorum, <span class="evidenziato"> sunt quidem ex, impedit expedita.</span> Ullam nihil debitis sit ipsam quis accusantium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem totam, modi ex incidunt est quisquam voluptatibus rerum repudiandae a consequuntur architecto, quibusdam voluptatem consequatur assumenda dignissimos consectetur vero, minus sit?</p>
+
         </section>
+
+        <section>
+
+            <ul>
+
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor nesciunt ipsa fugiat officiis adipisci ipsum nisi consequatur nulla repudiandae perspiciatis voluptas eum fugit sapiente perferendis, quod in, quis magni ratione.</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ratione eos et in odio asperiores nobis dignissimos voluptatum sit molestiae dolores magnam, modi ea commodi, dicta quidem exercitationem aut similique!</li>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur obcaecati, praesentium vero debitis porro veniam non molestiae ducimus cum tempore labore magnam, voluptates voluptatem odio doloribus ratione sequi! Molestiae, alias.</li>
+
+            </ul>
+
+        </section>
+        <!-- Fine paragrafo e lista non ordinata -->
         
 
 
