inserimento della tabella

--- a/index.html
+++ b/index.html
@@ -61,6 +61,40 @@
 
         </section>
         <!-- Fine paragrafo e lista non ordinata -->
+
+        <!-- Inizio tabella -->
+        <section>
+            <table id="tabella">
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th id="terza-colonna">Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr class="linea-blu">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero nam sed voluptatum, et repellat architecto aliquid delectus, inventore animi, modi nulla provident porro doloremque deserunt dignissimos fugiat. Ducimus, officiis.</td>
+                    </tr>
+
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero nam sed voluptatum, et repellat architecto aliquid delectus, inventore animi, modi nulla provident porro doloremque deserunt dignissimos fugiat. Ducimus, officiis.</td>
+                    </tr>
+
+                    <tr class="linea-blu">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore libero nam sed voluptatum, et repellat architecto aliquid delectus, inventore animi, modi nulla provident porro doloremque deserunt dignissimos fugiat. Ducimus, officiis.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <!-- Fine tabella -->
         
 
 
