--- a/index.html
+++ b/index.html
@@ -95,11 +95,27 @@
             </table>
         </section>
         <!-- Fine tabella -->
+
+        <!-- Inizio secondo paragrafo e sezione "potrebbero interessarti"-->
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus eos tempora voluptate provident soluta, doloremque aperiam sint reiciendis ea iste autem beatae, <span class="evidenziato">modi et officiis esse iure culpa ipsa porro? Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span> Odit numquam, velit ipsum excepturi corporis non, omnis ducimus, suscipit cumque dolorem sit. Perspiciatis recusandae ullam minima minus corrupti, facilis laboriosam quam.</p>
+        </section>
+
+        <section>
+            <h2 id="ultima-sezione">Potrebbero interessarti</h2>
+            <div id="prima-foto">
+                <div class="Lorem"><strong>Lorem ipsum dolor</strong></div>
+            </div>
+
+            <div id="seconda-foto">
+                <div class="Lorem"><strong>Lorem ipsum dolor</strong></div>
+            </div>
+
+
+        </section>
+        <!-- Fine secondo paragrafo e sezione finale -->
+
         
-
-
-
-
     </main>
 
     
