correzione semantica dell'autore

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <section>
 
             <h1 id="titolo">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-            <h2 id="sottotitolo">Scritto da <span id="booleaner">The Booleaner</span></h2>
-            <span id="data">il 10/10/2020</span>
+            <div id="autore">Scritto da <span id="booleaner">The Booleaner</span></div>
+            <div id="data">il 10/10/2020</div>
 
         </section>
         <!-- Fine sezione titolo e sottotitolo -->
