aggiunto la parte bonus dell'esercizio

--- a/bonus/index.html
+++ b/bonus/index.html
@@ -11,13 +11,14 @@
     <!-- Inizio dell'header -->
     <header>
 
-        <img id="logo" src="img/logo.svg" alt="logo Booleaner">
-
+        <div class="contenitore">
+            <img id="logo" src="img/logo.svg" alt="logo Booleaner">
+        </div>
     </header>
     <!-- Fine dell'header -->
 
     <!-- Apertura del tag main -->
-    <main>
+    <main class="contenitore">
 
         <!-- Inserimento titolo e sottotitolo-->
         <section>
@@ -33,8 +34,8 @@
         <section id="tim">
 
             <div>
-                <img class="foto-tim" src="img/tim-1.jpg" alt="Tim Berners-Lee">
-                <img class="foto-tim" src="img/tim-2.jpg" alt="Tim Berners-Lee">
+                <img src="img/tim-1.jpg" alt="Tim Berners-Lee">
+                <img src="img/tim-2.jpg" alt="Tim Berners-Lee">
             </div>
             <span class="descrizione">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</span><br>
             <span class="descrizione">2nd Photo: Wikimedia, by Paul Clarke</span>
